# react-native-bare-kit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  index.d.ts  index.js  package.json  prebuilds.js  react-native-bare-kit.podspec  react-native.config.js
.github/workflows/: integrate.yml  publish.yml  test.yml
android/: .npmignore  BareKitModuleAndroid.cc  CMakeLists.txt  build.gradle  link.js  link.mjs  prepare.js
android/cmake/: .npmignore
android/src/main/java/to/holepunch/bare/kit/react/: BareKitModule.java  BareKitPackage.java
ios/: .npmignore  BareKit.podspec  BareKitModule.h  BareKitModule.m  BareKitModule.mm  BareKitModuleProvider.h  BareKitModuleProvider.mm  link.js  link.mjs  prepare.js
shared/: BareKitModule.cc  BareKitModule.h  BareKitModuleDefault.cc
specs/: NativeBareKit.ts
